- rest-api module now use generated source files instead of pre-generated and committed - added tests for payment related logic in main application - unified response entity in open API config
